ui/scss/component/_livestream-chat.scss
@import '../init/breakpoints';
@import '../init/mixins';

$discussion-header__height: 3rem;
$recent-msg-button__height: 2rem;

.livestream__chat {
  width: 100%;
  background-color: var(--color-header-background);
  border-radius: var(--border-radius);
  margin-bottom: var(--spacing-m);

  .credit-amount {
    font-weight: unset;
  }

  .button-toggle--active {
    .credit-amount {
      color: var(--color-primary-contrast);
    }
  }
  .button__label {
    svg {
      margin-bottom: unset;
    }
  }

  @media (min-width: $breakpoint-medium) {
    margin: 0;
    width: var(--livestream-comments-width);
    height: calc(100vh - var(--header-height) - var(--spacing-l));
    position: absolute;
    right: 0;
    top: 0px;
    bottom: 0;
    border-top: none;
    border-bottom: none;
    border-right: none;

    .livestream-discussion__title {
      margin-left: 0;

      .menu__button {
        opacity: 1;
      }
    }

    .card__main-actions {
      padding: 0;
    }

    .recommended-content__toggles {
      margin-right: var(--spacing-xs);

      .button-toggle:nth-child(2) {
        margin-left: 2px;
      }

      .button-toggle--active {
        &:hover {
          p,
          span {
            color: var(--color-primary-contrast) !important;
          }
        }
      }

      .button-toggle {
        background-color: rgba(var(--color-primary-dynamic), 0.08);

        &:hover {
          background-color: rgba(var(--color-primary-dynamic), 0.1);
          p,
          span {
            color: var(--color-primary);
          }
        }
      }
    }
  }

  // Mobile
  @media (max-width: $breakpoint-small) {
    .button-toggle:last-of-type {
      margin-right: var(--spacing-xs);
    }

    .livestream-discussion__title {
      margin-left: var(--spacing-xs);
    }

    .livestream-superchats__wrapper {
      padding-left: var(--spacing-xs);
    }

    .livestream__comments-wrapper {
      .button__label {
        color: var(--color-secondary);
      }
      .button__content {
        color: var(--color-primary);
      }

      .section__actions {
        .button__label {
          color: var(--color-primary-contrast);
        }
        .button--alt,
        .button--link {
          .button__content {
            color: var(--color-text);
            .button__label {
              color: var(--color-text);
            }
          }
        }
      }
    }

    @media all and (orientation: landscape) {
      height: calc(100vw - var(--header-height) - var(--spacing-l));
      .livestream__comments-wrapper {
        height: calc(100vw - var(--header-height) - 3rem - var(--spacing-l));
      }
    }
  }
}

.livestream__chat--popout {
  margin: 0 !important;
  padding: 0 !important;
  width: 100vw !important;
  height: 100vh !important;
  top: 0 !important;

  .livestreamComments__wrapper {
    height: 95vh !important;
  }

  .livestreamSuperchats__wrapper {
    width: 100%;
  }

  .livestreamPinned__wrapper {
    width: 100%;
  }
}

.livestreamDiscussion__header {
  border-bottom: 1px solid var(--color-border);
  padding-bottom: var(--spacing-s);
  margin-bottom: 0;
  align-items: center;

  .recommended-content__toggles {
    button {
      height: unset;
      padding: 5px;
    }

    .button__label {
      max-height: 18px;
    }
  }

  @media (min-width: $breakpoint-small) {
    height: $discussion-header__height;
    padding: 0 var(--spacing-s);
    padding-right: 0;
  }

  @media (max-width: $breakpoint-small) {
    padding: var(--spacing-xxs);
  }
}

.livestreamDiscussion__title {
  display: flex;
  align-items: center;
  padding: 0;

  .menu__button {
    margin-left: var(--spacing-xxs);
    opacity: 1;
  }

  @media (max-width: $breakpoint-small) {
    .menu__button {
      margin-left: 5px;
    }
  }
}

.livestreamComments__wrapper {
  display: flex;
  flex-direction: column;
  height: calc(100vh - var(--header-height) - #{$discussion-header__height} - var(--spacing-l));
  overflow-x: scroll;

  .main--empty {
    .yrbl__wrap {
      flex-direction: column !important;
      align-items: center;

      img {
        margin: 0;
      }
    }
  }
}

.livestream__comments {
  display: flex;
  flex-direction: column-reverse;
  font-size: var(--font-small);
  overflow-y: scroll;
  overflow-x: visible;
  padding-top: var(--spacing-s);
  width: 100%;
}

.livestreamComments__scrollToRecent {
  margin-top: -$recent-msg-button__height;
  align-self: center;
  margin-bottom: var(--spacing-xs);
  font-size: var(--font-xsmall);
  padding: var(--spacing-xxs) var(--spacing-s);
  opacity: 0.9;

  &:hover {
    opacity: 1;
  }
}

.livestream__commentCreate {
  padding: var(--spacing-s);
  border-top: 1px solid var(--color-border);
  margin-top: auto;

  .commentCreate {
    select,
    textarea,
    input {
      background-color: var(--color-header-button);
    }
    .help {
      color: var(--color-text);
    }
    .comment__char-count-mde {
      background-color: var(--color-header-button) !important;
    }
    .button--file-action {
      .icon {
        background-color: var(--color-header-button) !important;
      }
      color: var(--color-text);
    }
    .button--link {
      border-radius: var(--border-radius);
    }

    .section__actions {
      .button--alt,
      .button--link {
        background-color: var(--color-header-button);
      }
    }
  }

  .section {
    margin-top: var(--spacing-s);
  }
}

.livestreamSuperchats__wrapper {
  flex-shrink: 0;
  position: relative;
  overflow-x: scroll;
  padding: var(--spacing-s) var(--spacing-xs);
  border-bottom: 1px solid var(--color-border);
  font-size: var(--font-small);
  background-color: var(--color-card-background);

  @media (min-width: $breakpoint-small) {
    padding: var(--spacing-xs);
    width: var(--livestream-comments-width);
  }
}

.livestreamPinned__wrapper {
  display: flex;
  flex-shrink: 0;
  position: relative;
  padding: var(--spacing-s) var(--spacing-xs);
  border-bottom: 1px solid var(--color-border);
  font-size: var(--font-small);
  background-color: var(--color-card-background-highlighted);
  width: 100%;

  .livestream__comment {
    width: 100%;
    padding-top: var(--spacing-xs);
    max-height: 6rem;
    overflow-y: scroll;
  }

  .close-button {
    border-left: 1px solid var(--color-border);
    padding: 0 calc(var(--spacing-m) - var(--spacing-xs)) 0 var(--spacing-m);
    color: var(--color-text-subtitle);
  }

  @media (min-width: $breakpoint-small) {
    padding: var(--spacing-xs);
    width: var(--livestream-comments-width);
  }
}

.livestream__comment {
  list-style-type: none;
  position: relative;

  .date_time {
    color: var(--color-text-subtitle);
    opacity: var(--live-timestamp-opacity);
  }

  &:hover {
    .date_time {
      opacity: 0.5;
    }
  }

  @media (min-width: $breakpoint-small) {
    &:hover {
      background-color: rgba(var(--color-primary-dynamic), 0.1);

      .menu__button {
        opacity: 1;
      }

      .comment__author {
        color: var(--color-primary);
      }
    }

    &:not(:hover) {
      .menu__button:not(:focus):not([aria-expanded='true']) {
        opacity: 0;
      }
    }
  }

  .channel-name {
    font-size: var(--font-xsmall);
  }
}

.livestreamSuperchat__amount--large {
  .credit-amount {
    display: flex;
    align-items: center;
    flex-wrap: nowrap;
  }
}

.livestreamSuperchats__inner {
  display: flex;

  .close-button {
    color: var(--color-text-subtitle);
  }
}

.livestream__superchat {
  display: flex;
  margin-right: var(--spacing-xs);
  padding: var(--spacing-xxs);
  border-radius: var(--border-radius);

  .channel-thumbnail {
    margin-right: var(--spacing-xs);
    @include handleChannelGif(2rem);
  }

  &:first-of-type {
    background-color: var(--color-superchat);

    .channel-name {
      max-width: 8rem;
    }
  }

  &:nth-of-type(2) {
    background-color: var(--color-superchat-2);
  }
  &:nth-of-type(3) {
    background-color: var(--color-superchat-3);
  }

  &:nth-of-type(-n + 3) {
    .channel-name,
    .credit-amount {
      color: var(--color-black);
    }
  }

  .channel-name {
    max-width: 5rem;
  }
}

.livestreamSuperchat__info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: var(--font-xsmall);

  .button {
    margin-top: calc(var(--spacing-xxs) / 2);
  }
}

.livestreamSuperchat__info--sticker {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  flex-direction: row;
  width: 8rem;
  height: 3rem;

  .livestreamSuperchat__info--user {
    .channel-name {
      max-width: 5rem;
    }
  }

  .livestreamSuperchat__info--image {
    width: 100%;
    height: 100%;
  }
}

.livestreamSuperchat__info--notSticker {
  flex-direction: row;
}

.livestreamSuperchat__amount--large {
  min-width: 2.5rem;
}

